# TwinMind-AI

./: .env.example  .gitignore  main.py  pyproject.toml
notebooks/: concepts.ipynb  experiments.ipynb
src/: supervisor.py
src/agents/: evaluator.py  worker.py
src/tools/: langchain_tools.py  push_notification.py
